# noughts-and-crosses

./: .gitlab-ci.yml  Cargo.toml  README.md  idea.glade  logo.afdesign
src/: data.rs  game.rs  main.rs  style.css
ui/: style.css  ui.glade  ui.glade~
