[package]
name = "noughts-and-crosses"
version = "0.0.2"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://gitlab.com/efunb/noughts-and-crosses/blob/master/README.md"
repository = "https://gitlab.com/efunb/noughts-and-crosses"
description = """
My attempt at making a well designed game using GTK.
"""

[dependencies]
pango = "0.6"
[dependencies.gtk]
version = "0.6.0"
features = ["v3_16"]

[profile.release]
lto = true